--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     ]
   },
   "dependencies": {
+    "@langchain/core": "^0.3.61",
+    "@langchain/google-genai": "^0.2.14",
+    "@langchain/groq": "^0.2.3",
     "bootstrap": "^4.1.3",
     "bootstrap-slider": "^10.6.1",
     "diff": "^7.0.0",
