--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jquery-csv": "^0.8.9",
     "js-sha256": "^0.9.0",
     "langchain": "0.0.214",
+    "langsmith": "^0.3.37",
     "lodash": "^4.17.21",
     "popper.js": "^1.14.4",
     "qtip2": "^3.0.3",
