--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     ]
   },
   "dependencies": {
+    "@langchain/anthropic": "^1.0.0",
     "@langchain/core": "^0.3.61",
     "@langchain/google-genai": "^0.2.14",
     "@langchain/groq": "^0.2.3",
+    "@langchain/openai": "^1.0.0",
     "bootstrap": "^4.1.3",
     "bootstrap-slider": "^10.6.1",
     "diff": "^7.0.0",
@@ -33,7 +35,7 @@
     "jquery": "^3.3.1",
     "jquery-csv": "^0.8.9",
     "js-sha256": "^0.9.0",
-    "langchain": "0.0.214",
+    "langchain": "^1.0.3",
     "langsmith": "^0.3.37",
     "lodash": "^4.17.21",
     "popper.js": "^1.14.4",
